set a rule that fixed input box sizing There was an issue where adding padding to an input box caused it to spill out over the sides of the box that contained it. That is fixed now.

--- a/Project/app/styles/modules/inputs.styl
+++ b/Project/app/styles/modules/inputs.styl
@@ -3,6 +3,7 @@
 
 input
     padding 10px
+    box-sizing border-box
     font-size 1em
     display block
     margin 10px 0
